# claude-software-factory-template

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  REQUIREMENTS.md  inter-agent-diagnostics.patch
.claude/: settings.json
.claude/agents/: bug-fixer.md  devops-sre.md  ios-native.md  marketing-docs.md  qa-improver.md  release-engineer.md  triage-product.md
.claude/hooks/: session-start-gh-auth.sh
.github/apps/: code-agent.json  devops.json  factory-manager.json  qa.json  triage.json
.github/examples/: bug-fix-with-app.yml.example
.github/workflows/: bug-fix.yml  ci-failure-monitor.yml  ci-watcher.yml  ci.yml  ci.yml.example  devops.yml  factory-manager.yml  factory-tests.yml  ios-agent.yml  marketing.yml  principal-engineer.yml  product-manager.yml  qa.yml  release-eng.yml  triage.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_main.py
docs/: AGENT_REFERENCE.md  CODE_AGENT.md  DEVOPS.md  FACTORY_MANAGER.md  GITHUB_APPS.md  IOS_AGENT.md  OBSERVABILITY.md  PRINCIPAL_ENGINEER.md  QA_AGENT.md  RELEASE_ENG.md  TRIAGE.md
frontend/: .gitignore  README.md  jest.config.js  next.config.js  package-lock.json  package.json
frontend/__tests__/: page.test.tsx
scripts/: setup-factory.sh  setup-github-apps.sh  setup-slack.sh  setup.sh  validate-factory.sh
services/slack-bot/: .claude-process-rules.md  .claude-self-test.js  .claude-test-report.json  .dockerignore  .env.example  Dockerfile  ENHANCED_FORMATTING.md  README.md  (+8 more)
test-project/: README.md  jest.config.js  package.json
(+40 files in other folders)
